feat: add raw structures for basic routes, controllers, and models
