# server/routes/sourceMap.js
@@ -1,9 +1,9 @@
 import { Router } from 'express';
-import getSourceMap from '../controllers/sourceMap.js';
+import createSourceMap from '../controllers/sourceMap.js';
 import uploadToDisk from '../middlewares/savaMapToDisk.js';
 
 const router = Router();
 
-router.route('/sourceMap').post(uploadToDisk, getSourceMap);
+router.route('/sourceMap').post(uploadToDisk, createSourceMap);
 
 export default router;
